scaffold/typescript-go-main/testdata/baselines/reference/submodule/conformance/jsDeclarationsExportAssignmentExpressionPlusSecondary.errors.txt
index.js(5,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== index.js (1 errors) ====
    const Strings = {
        a: "A",
        b: "B"
    };
    module.exports = {
    ~~~~~~~~~~~~~~~~~~
        thing: "ok",
    ~~~~~~~~~~~~~~~~
        also: "ok",
    ~~~~~~~~~~~~~~~
        desc: {
    ~~~~~~~~~~~
            item: "ok"
    ~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
    };
    ~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    module.exports.Strings = Strings;
    